# climaterisk

./: .env.example  .gitignore  README.md  pyproject.toml  run.command
.claude/: launch.json
assets/libraries/: data_sources.json  finance_reference.json  impact_function_presets.json  impact_functions.json  perils.json
docs/: API.md  ARCHITECTURE.md  CLIMADA_COVERAGE.md  METHODOLOGY.md
frontend/climaterisk/: index.html  package-lock.json  package.json  vite.config.ts
frontend/climaterisk/src/: App.tsx  styles.css  types.ts
frontend/climaterisk/src/components/: Aggregation.tsx  AssetEditor.tsx  AssetGrid.tsx  BarsChart.tsx  (+7 more)
scripts/: build_hazard.py  build_impf_presets.py  fetch_ngfs.py
src/climaterisk/: __init__.py  config.py  logger.py
src/climaterisk/api/: __init__.py  deps.py  main.py
src/climaterisk/core/: __init__.py  entities.py  enums.py
src/climaterisk/data/: __init__.py  fetch.py  hazard_catalog.py  libraries.py  session_store.py
src/climaterisk/engines/: __init__.py  base.py
src/climaterisk/finance/: __init__.py  channels.py  core.py  models.py  service.py
src/climaterisk/report/: __init__.py  html.py
src/climaterisk/runs/: __init__.py  manager.py  store.py
src/climaterisk/transition/: __init__.py  carbon.py
tests/: conftest.py  test_api.py  test_aqueduct_layers.py  test_calibration.py  test_catalog.py  test_catalog_perils.py  test_export.py  test_exposures.py  test_fetch.py  test_finance.py  test_footprint.py  test_forecast.py  test_gpl_boundary.py  test_impf_presets.py  test_ingest_plan.py  test_physical_regression.py  test_report.py  test_request_options.py  test_run_manager_capacity.py  test_session_store.py  test_tc_surge.py  test_transition.py
worker/climaterisk_worker/: __init__.py  calibration.py  cost_benefit.py  env_climada.yml  exposures.py  forecast.py  hazard_preview.py  ingest.py  litpop.py  physical.py  run_job.py  supplychain.py  uncertainty.py
(+20 files in other folders)
