[project]
name = "climaterisk"
version = "0.1.0"
description = "Web-based climate physical- and transition-risk analysis platform (map-first, CLIMADA-backed)."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "pandas-stubs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/climaterisk"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# The project-local CLIMADA conda env lives in-repo; never lint its site-packages.
extend-exclude = [".climada-env"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
# Allow Greek letters / en-dashes in math + methodology docstrings.
ignore = ["RUF001", "RUF002", "RUF003", "RUF012"]

[tool.ruff.lint.per-file-ignores]
# The report is a wide inline HTML/CSS template; the data/CLI scripts and worker
# hazard modules carry long literals / dense numeric one-liners.
"src/climaterisk/report/html.py" = ["E501"]
"scripts/fetch_ngfs.py" = ["E501"]
"scripts/build_hazard.py" = ["E501"]
"worker/climaterisk_worker/catalog.py" = ["E501"]
"worker/climaterisk_worker/hazard_convert.py" = ["E501"]
"worker/climaterisk_worker/cost_benefit.py" = ["E501"]
"worker/climaterisk_worker/uncertainty.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
packages = ["climaterisk"]
mypy_path = "src"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
